tests/out/error/result/result_to_propagate.out
tests/out/error/result/result_to_propagate.in.bt:6:2 error: `missing_result_return` must return a result to use propagation
